Fri Jul 21 17:52:18 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	* po/pt_BR.po:
	* po/lt.po:
	  - Update from rosetta

Wed Jul 19 11:58:08 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac: Bump to 0.14svn

==================== 0.13 ====================

Mon Jul 17 23:34:37 CEST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/userlist-gui.c:
	* data/xchat-gnome-ui.xml:
	  - Add GUI to give OP status.

Sun Jul 16 22:15:14 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	  - Remove double g_free. Fix a crash in IRC command
	    completion. (#333482)

Sat Jul 15 22:33:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	  - Fix a leak with new_prefix.
	  - Set the cursor at the end of the longest common prefix.

Sat Jul 15 21:42:52 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Fix a crash when saving transcript without current
	    session. (Launchpad: #52692)
	* src/fe-gnome/main-window.c:
	  - Fix a crash when leaving discussion without current
	    session.

Mon Jul 10 00:38:11 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Code cleaning to fix a crash when adding the first autojoin
	    channel.

Sun Jul  9 22:38:36 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	* src/fe-gnome/main-window.c:
	  - Display a red marker line showing messages since last
	    focus. (#330150)
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/preferences-page-irc.h:
	* data/preferences-dialog.glade:
	  - Add a option in the preference dialog for the marker
	    line.

Sat Jul  8 23:44:57 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Fix quick channel auto-join to support keys. (#347002)

Sat Jul  8 22:39:51 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/fe-gnome.c: